# zigzag-interpreter

./: .gitignore  pyproject.toml
zigzag/: __init__.py
zigzag/computer/: __init__.py
zigzag/computer/commands/display/: __init__.py
zigzag/computer/commands/keyboard/: __init__.py
zigzag/computer/commands/mouse/: __init__.py
zigzag/computer/commands/terminal/: __init__.py
