[tool.poetry]
name = "zigzag"
version = "0.1.0"
description = ""
authors = ["Khizer Younas <m.khizeryounas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
numpy = "^1.26.4"
pillow = "^10.2.0"
torch = "^2.2.2"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
psutil = "^5.9.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "zigzag:main"
